--- a/styles.css
+++ b/styles.css
@@ -273,29 +273,28 @@ body {
   .copy-container h4 {
     color: var(--color-dark);
     font-weight: 600;
-
     display: inline-block;
-    margin:0;
+    margin: 0;
     margin-left: 8px;
   }
   
-  .copy-container button {
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    vertical-align: middle;
-    transition: color 0.1s ease-in;
+  .copy-container > div {
+    display: flex;
+    gap: 8px;
   }
+  
   .copy-container button {
     color: var(--color-dark);
     background: none;
     border: none;
     cursor: pointer;
+    transition: color 0.1s ease-in;
   }
-
+  
   .copy-container button:hover {
-    color: var(--color-green); 
+    color: var(--color-green);
   }
+  
   .copy-popup {
     position: absolute;
     top: 12px;
